--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,8 @@
     "smd-social": "Soulmatters/smd-social#^1.0.1",
     "paper-styles": "PolymerElements/paper-styles#^2.1.0",
     "paper-input": "PolymerElements/paper-input#^2.2.0",
-    "paper-toast": "PolymerElements/paper-toast#^2.1.0"
+    "paper-toast": "PolymerElements/paper-toast#^2.1.0",
+    "polymerfire": "firebase/polymerfire#^2.2.1"
   },
   "resolutions": {
     "polymer": "^2.0.0"
