--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,7 @@
     "iron-flex-layout": "PolymerElements/iron-flex-layout#^2.0.0",
     "iron-iconset-svg": "PolymerElements/iron-iconset-svg#^2.0.0",
     "iron-media-query": "PolymerElements/iron-media-query#^2.0.0",
-    "iron-pages": "PolymerElements/iron-pages#^2.0.0",
+    "iron-pages": "PolymerElements/iron-pages#^2.1.0",
     "iron-selector": "PolymerElements/iron-selector#^2.0.0",
     "paper-icon-button": "PolymerElements/paper-icon-button#^2.0.0",
     "polymer": "Polymer/polymer#^2.0.0",
@@ -25,7 +25,11 @@
     "paper-styles": "PolymerElements/paper-styles#^2.1.0",
     "paper-input": "PolymerElements/paper-input#^2.2.0",
     "paper-toast": "PolymerElements/paper-toast#^2.1.0",
-    "polymerfire": "firebase/polymerfire#^2.2.1"
+    "polymerfire": "firebase/polymerfire#^2.2.1",
+    "google-apis": "GoogleWebComponents/google-apis#^2.0.1",
+    "iron-component-page": "PolymerElements/iron-component-page#^3.0.1",
+    "google-map": "GoogleWebComponents/google-map#^2.0.4",
+    "good-map": "keanulee/good-map#^0.0.1"
   },
   "resolutions": {
     "polymer": "^2.0.0"
