--- a/package.json
+++ b/package.json
@@ -1,15 +1,25 @@
+
 {
   "name": "polymer-starter-kit",
   "license": "BSD-3-Clause",
   "devDependencies": {
     "eslint": "^3.19.0",
     "eslint-config-google": "^0.7.0",
-    "eslint-plugin-html": "^2.0.0"
+    "eslint-plugin-html": "^2.0.0" ,
+    "version": "^0.1.0"
+
+
   },
   "scripts": {
     "lint": "npm run lint:javascript && polymer lint",
     "lint:javascript": "eslint . --ext js,html --ignore-path .gitignore",
     "test": "polymer test",
     "test:integration": "polymer build # test that psk builds without error with the CLI"
+  },
+  "dependencies": {
+    "@webcomponents/webcomponentsjs": "github:webcomponents/webcomponentsjs",
+    "webcomponents": "^0.1.4",
+    "webcomponentsjs": "^1.0.2"
   }
 }
+
