--- a/package.json
+++ b/package.json
@@ -1,25 +1,29 @@
-
 {
-  "name": "polymer-starter-kit",
-  "license": "BSD-3-Clause",
-  "devDependencies": {
-    "eslint": "^3.19.0",
-    "eslint-config-google": "^0.7.0",
-    "eslint-plugin-html": "^2.0.0" ,
-    "version": "^0.1.0"
-
-
-  },
-  "scripts": {
-    "lint": "npm run lint:javascript && polymer lint",
-    "lint:javascript": "eslint . --ext js,html --ignore-path .gitignore",
-    "test": "polymer test",
-    "test:integration": "polymer build # test that psk builds without error with the CLI"
+  "name": "test",
+  "version": "1.0.0",
+  "description": "[![Build Status](https://travis-ci.org/Polymer/polymer-starter-kit.svg?branch=master)](https://travis-ci.org/Polymer/polymer-starter-kit)",
+  "main": "service-worker.js",
+  "directories": {
+    "test": "test"
   },
   "dependencies": {
-    "@webcomponents/webcomponentsjs": "github:webcomponents/webcomponentsjs",
-    "webcomponents": "^0.1.4",
-    "webcomponentsjs": "^1.0.2"
-  }
+    "webcomponents": "^0.1.4"
+  },
+  "devDependencies": {
+    "polymer-cli": "^1.6.0"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/perlutza/soulmatters-test.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/perlutza/soulmatters-test/issues"
+  },
+  "homepage": "https://github.com/perlutza/soulmatters-test#readme"
 }
-
