--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
   "dependencies": {
     "webcomponents": "^0.1.4"
   },
-  "devDependencies": {
-    "polymer-cli": "^1.6.0"
-  },
+  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "polymer build"
   },
   "repository": {
     "type": "git",
